isuse#81 Improvement: UI has several places to be improved  (#121)
* arksec-risk-portal modify

* arksec-risk-portal modify

* word for camel apart

* cluster chart and table updates

* namespace chart and table updates

* Replace kube bench chart

* word for camel apart

* image/workload detail pages support width dragging

* word for camel apart

* word for camel apart

* Remove useless commented code

* Remove useless commented code

Co-authored-by: qijianshuai <qjianshuai@vmware.com>

--- a/src/frontend/src/assets/i18n/en.json
+++ b/src/frontend/src/assets/i18n/en.json
@@ -29,7 +29,7 @@
     "violations": "Violations",
     "containers_total": "The number of vulnerable containers",
     "status": "Status",
-    "workload_amount": "Workload Amount",
+    "workload_amount": "Number of Workloads",
     "reset": "Reset",
     "update": "Update",
     "create": "Create",
@@ -86,7 +86,7 @@
     "data_provider": "Data Provider",
     "endpoint": "Endpoint",
     "provider": "Provider",
-    "namespace_assessments": "NamespaceAssessments",
+    "namespace_assessments": "Namespace Assessments",
     "action_enforcements": "Action Enforcements",
     "resource_version": " Resource Version",
     "isInit": "IsInit",
@@ -208,6 +208,7 @@
   "Kube_bench_list": {
     "title": "Kube Bench Reports",
     "node_type": "Node Type",
+    "node_name": "Node Name",
     "passed": "Passed",
     "failed": "Failed",
     "warned": "Warned",
